Code/PXUltima/Source/OS/File/PXFile.h

	typedef enum PXFileLocationMode_
	{
		PXFileLocationModeInvalid,
		PXFileLocationModeInternal, // Memory is handled internally.
		PXFileLocationModeExternal, // Memory is stored outside this object
		PXFileLocationModeMappedVirtual, // Used 'VirtalAlloc()' / 'mmap()'
		PXFileLocationModeMappedFromDisk, // Used 'FileView()' / 'fmap()'
		PXFileLocationModeCachedFromDisk, // When the file is cached into an CPrivate buffer
		PXFileLocationModeLinked // Used existing file with 'fopen()'
	}
	PXFileLocationMode;
	typedef struct PXFile_
	{
		//---<PosisionData>---
		void* Data; // [Do not use directly] Data from where to read/write depending on the used method of linking.
		PXSize DataCursor; // [Do not use directly] Current position of the data.
		PXSize DataCursorBitOffset; // [Do not use directly] Current offset in bits of current byte
		PXSize DataSize; // [Do not use directly] The total size of the data block.
		PXSize DataAllocated; // [Do not use directly] The size of the data pace in which you can move without triggering an invalid access.
		//--------------------

		PXMemoryAccessMode AccessMode;
		PXMemoryCachingMode CachingMode;
		PXFileLocationMode LocationMode;

#if OSUnix
		FILE* ID;
		int MappingID;
#elif OSWindows
		HANDLE ID;
		HANDLE MappingID;
#endif
	}
	PXFile;
	/*
	typedef struct FilePath_
	{
		wchar_t Path[PathMaxSize];
		wchar_t Drive[DriveMaxSize];
		wchar_t Directory[DirectoryMaxSize];
		wchar_t FileName[FileNameMaxSize];
		wchar_t Extension[ExtensionMaxSize];
	}
	FilePath;*/

	//---<Utility>---------------------------------------------------------
	PXPublic PXBool PXFileDoesExistA(const char* filePath);
	PXPublic PXBool PXFileDoesExistW(const wchar_t* filePath);
	PXPublic PXActionResult PXFileRemoveA(const char* filePath);
	PXPublic PXActionResult PXFileRemoveW(const wchar_t* filePath);
	PXPublic PXActionResult PXFileRenameA(const char* oldName, const char* newName);
	PXPublic PXActionResult PXFileRenameW(const wchar_t* oldName, const wchar_t* newName);
	PXPublic PXActionResult PXFileCopyA(const char* sourceFilePath, const char* destinationFilePath);
	PXPublic PXActionResult PXFileCopyW(const wchar_t* sourceFilePath, const wchar_t* destinationFilePath);
	//---------------------------------------------------------------------

	//---<Set>-------------------------------------------------------------
	PXPublic void PXFileBufferAllocate(PXFile* const pxFile, const PXSize dataSize);
	PXPublic void PXFileBufferExternal(PXFile* const pxFile, void* const data, const PXSize dataSize);
	//---------------------------------------------------------------------

	//---<Open>------------------------------------------------------------
	PXPublic PXActionResult PXFileOpenFromPathA(PXFile* const pxFile, const PXTextASCII filePath, const PXMemoryAccessMode pxAccessMode, const PXMemoryCachingMode pxMemoryCachingMode);
	PXPublic PXActionResult PXFileOpenFromPathW(PXFile* const pxFile, const PXTextUNICODE filePath, const PXMemoryAccessMode pxAccessMode, const PXMemoryCachingMode pxMemoryCachingMode);
	PXPublic PXActionResult PXFileOpenFromPathU(PXFile* const pxFile, const PXTextUTF8 filePath, const PXMemoryAccessMode pxAccessMode, const PXMemoryCachingMode pxMemoryCachingMode);
	//---------------------------------------------------------------------

	//---<Close>-----------------------------------------------------------
	PXPublic PXActionResult PXFileClose(PXFile* const pxFile);
	//---------------------------------------------------------------------

	//---<Mapping>---------------------------------------------------------
	PXPublic PXActionResult PXFileMapToMemoryA(PXFile* const pxFile, const PXTextASCII filePath, const PXSize fileSize, const PXMemoryAccessMode protectionMode);
	PXPublic PXActionResult PXFileMapToMemoryW(PXFile* const pxFile, const PXTextUNICODE filePath, const PXSize fileSize, const PXMemoryAccessMode protectionMode);
	PXPublic PXActionResult PXFileMapToMemoryU(PXFile* const pxFile, const PXTextUTF8 filePath, const PXSize fileSize, const PXMemoryAccessMode protectionMode);
	PXPublic PXActionResult PXFileMapToMemory(PXFile* const pxFile, const PXSize size, const PXMemoryAccessMode protectionMode);
	PXPublic PXActionResult PXFileUnmapFromMemory(PXFile* const pxFile);
	//---------------------------------------------------------------------

	//---<Parsing Utility>-----------------------------------------------------
	PXPublic PXSize PXFileRemainingSize(const PXFile* PXRestrict const dataStream);
	PXPublic PXSize PXFileRemainingSizeRelativeFromAddress(const PXFile* PXRestrict const dataStream, const void* const adress);
	PXPublic PXBool PXFileIsAtEnd(const PXFile* PXRestrict const dataStream);
	PXPublic void* PXFileCursorPosition(PXFile* const pxFile);
	PXPublic void PXFileCursorMoveTo(PXFile* const pxFile, const PXSize position);
	PXPublic void PXFileCursorToBeginning(PXFile* const pxFile);
	PXPublic PXSize PXFileCursorAdvance(PXFile* const pxFile, const PXSize steps);
	PXPublic void PXFileCursorRewind(PXFile* const pxFile, const PXSize steps);
	PXPublic void PXFileCursorToEnd(PXFile* const pxFile);
	//-------------------------------------------------------------------------

	//-------------------------------------------------------------------------
	PXPublic PXSize PXFileSkipEndOfLineCharacters(PXFile* const  PXFile);
	PXPublic PXSize PXFileSkipEmptySpace(PXFile* const pxFile);
	PXPublic PXSize PXFileReadNextLineInto(PXFile* const pxFile, void* exportBuffer, const PXSize exportBufferSize);